# AgriML

AgriMLServer/: CMakeLists.txt
AgriMLServer/include/: AgriML.h
AgriMLServer/src/: AgriML.cpp  main.cpp
